-make the gallery/table loader have a greater z-index so it is on top of the modal, and remove the modal-specific loader. -shrink the metadata menu font size at the same time the slide is shrunk on resize so they have the same font size. -fix the direction the menu pops up <or down> based on what item is selected.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1108,6 +1108,10 @@ img.op-slideshow-image-preview {
     max-height: 70vh !important;
 }
 
+.op-resize-small {
+    font-size: 75%;
+}
+
 /* make modal width shrink smoothly with screen */
 #galleryView .modal-dialog {
     max-width: 92%;
@@ -1116,10 +1120,6 @@ img.op-slideshow-image-preview {
 #galleryView .modal-content {
     border: solid 2px #FFF;
     max-height: 80vh !important;
-}
-
-#galleryView .op-resize-small {
-    font-size: 75%;
 }
 
 /* make sure left/right hand icon in metadata dialog stay in the same line
@@ -1131,16 +1131,20 @@ when window sized is narrow */
 #galleryView .left a, #galleryView .left a img {
     height: 100%;
 }
+
 #galleryView .row {
     height: 100%;
 }
+
 #op-gallery-view-contents {
     height: 100%;
 }
+
 /* This is the place that restrict the size of the modal contents, now set it to 90% of window height by default */
 #galleryView .modal-dialog, #galleryView .modal-content {
     height: 90%;
 }
+
 #galleryView {
     height: 100%;
 }
